--- a/LazyBot evolution/LazyLib/LazyLib.csproj
+++ b/LazyBot evolution/LazyLib/LazyLib.csproj
@@ -51,7 +51,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevComponents.DotNetBar2, Version=9.0.0.4, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL" />
+    <Reference Include="DevComponents.DotNetBar2, Version=10.1.0.1, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\DevComponents.DotNetBar2.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
@@ -123,6 +126,7 @@
     </Compile>
     <Compile Include="Logging.cs" />
     <Compile Include="LogType.cs" />
+    <Compile Include="Manager\BlueChat.cs" />
     <Compile Include="Manager\Constants.cs" />
     <Compile Include="Manager\Descriptors.cs" />
     <Compile Include="Manager\Wow\Location.cs" />
